# cs128h-project

./: .gitignore  Cargo.toml  README.md  RUN.md  flake.nix
src/: ast.rs  builtins.rs  env.rs  evaluator.rs  frontend.rs  main.rs  parser.rs  proc_manager.rs
src/grammar/: shell.pest
