[package]
publish = false
name = "cs128h-project"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
color-eyre = "0.6.3"
rustyline = "14.0.0"
thiserror = "1.0.58"
dirs-next = "2.0.0"
log = "0.4.21"
env_logger = "0.11.3"
