[package]
publish = false
name = "cs128h-project"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
color-eyre = "0.6.3"
dirs-next = "2.0.0"
env_logger = "0.11.3"
log = "0.4.21"
once_cell = "1.19.0"
pest = "2.7.8"
pest_derive = "2.7.8"
rustyline = "14.0.0"
subprocess = "0.2.9"
thiserror = "1.0.58"
