[package]
publish = false
name = "cs128h-project"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
dirs-next = "2.0.0"
env_logger = "0.11.3"
log = "0.4.21"
parking_lot = "0.12.2"
pest = "2.7.10"
pest_derive = "2.7.10"
rustyline = "14.0.0"
subprocess = "0.2.9"
thiserror = "1.0.59"
